# bitcoin-explorer

./: .gitignore  LICENSE  README.md  docker-compose.yml  init.sql
bitcoin-explorer-frontend/: .env  Dockerfile  package.json
bitcoin-explorer-frontend/public/: index.html
bitcoin-explorer-frontend/src/: App.css  App.tsx  index.css
bitcoin-explorer-ingestion/: .env  Cargo.toml  Dockerfile
bitcoin-explorer-ingestion/src/: ingestion.rs  main.rs  server.rs
